frame/support/test/tests/pallet_ui/event_004.stderr
error: Invalid `type Event`, associated type `Event` is reserved and must bound: `IsType<<Self as frame_system::Config>::Event>`
 --> $DIR/event_004.rs:9:3
  |
9 |         type Event;
  |         ^^^^
